gitlab-ci: use pandoc image
pandoc is useful for tuto.
Pandoc is not (yet) available in alpine packages (only in edge at the moment).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -277,7 +277,9 @@ test_server_unit:
   
       
 .test_server_base_dind:
-  image: alpine:latest
+  image:
+    name: pandoc/core:latest
+    entrypoint: [""]
   stage: test_functional
   services:
     - docker:dind
