--- a/.gitlab-test-reproducibility.yml
+++ b/.gitlab-test-reproducibility.yml
@@ -2,14 +2,16 @@ generate_server_reproducibility_yml:
   stage: test_tools
   variables:
     REPEAT: 30
-  script:
-    - tools/repeat-ci.sh server/.gitlab-ci.yml $REPEAT .gitlab-ci.yml .test_server_base .test_cypress_base .setup_docker_server .test_server_base_dind .before_script_global .before_script_global_docker -- .gitlab-ci.yml browser/.gitlab-ci.yml | grep -v .need > server-repro.yml
+  script: |
+    tools/repeat-ci.sh server/.gitlab-ci.yml $REPEAT .gitlab-ci.yml .test_server_base .test_cypress_base .setup_docker_server .test_server_base_dind .before_script_global .before_script_global_docker -- .gitlab-ci.yml browser/.gitlab-ci.yml | grep -v .need > server-repro.yml
+    sed -r 's/^(\s*)(tags:.*)$/\1when: manual\n\1\2/' server-repro.yml > server-repro-manual.yml
   needs: []
   only:
     - /^feature-.*s.*\/.*$/
   artifacts:
     paths:
       - server-repro.yml
+      - server-repro-manual.yml
 
 generate_client_reproducibility_yml:
   stage: test_tools
@@ -37,6 +39,19 @@ server_reproducibility:
     - /^feature-.*s.*\/.*$/
   allow_failure: true
 
+server_reproducibility_manual:
+  stage: test_cypress_server
+  needs: [generate_server_reproducibility_yml]
+  trigger:
+    include:
+      - artifact: server-repro-manual.yml
+        job: generate_server_reproducibility_yml
+    strategy: depend
+  when: manual
+  only:
+    - /^feature-.*s.*\/.*$/
+  allow_failure: true
+  
 client_reproducibility:
   stage: test_cypress_client
   needs: [generate_client_reproducibility_yml]
