--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -376,6 +376,35 @@ deploy_review_server:
   extends:
     - .need_for_independant_test
 
+deploy_client:
+  stage: deploy_prod
+  image: testcontainers/sshd
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh    
+    - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts  
+  script:
+    - ssh vidjil@$PROD_CLIENT_SERVER "
+         cd $PROD_CLIENT_PATH && \
+         git fetch
+         && git reset --hard origin/prod-client
+         && make germline
+         && cp doc/analysis-example.vidjil browser/
+         && cd docker
+         && docker-compose down
+         && docker-compose up -d"
+  environment:
+    name: production
+    url: https://$PROD_CLIENT_SERVER/?data=analysis-example.vidjil
+  only:
+    - prod-client
+  tags:
+    - cidocker
+  
+    
 deploy_docker:
   stage: deploy_prod
   script:
