--- a/docker/.env
+++ b/docker/.env
@@ -13,6 +13,10 @@ WEB2PY_ADMIN_PASSWORD=web2py_admin_password
 # Path to use to store persistant data of vidjil server (upload, results, ...)
 VOLUME_PATH=./opt/vidjil/
 
+# Postfix service
+maildomain=vidjil.org
+smtp_user=vidjil:smtp_pass
+
 
 #############################
 # Don't change these values
