docker; change defualt path of volume Hope this will fix the CI error

--- a/docker/.env
+++ b/docker/.env
@@ -11,7 +11,7 @@ MYSQL_PASSWORD=rootpass
 WEB2PY_ADMIN_PASSWORD=web2py_admin_password
 
 # Path to use to store persistant data of vidjil server (upload, results, ...)
-VOLUME_PATH=./opt/vidjil/
+VOLUME_PATH=/opt/vidjil/
 
 # Postfix service
 maildomain=vidjil.org
