docker-compose-ci, add links declaration

--- a/docker/docker-compose-ci.yml
+++ b/docker/docker-compose-ci.yml
@@ -29,6 +29,8 @@ services:
         volumes:
             - ../browser:/usr/share/vidjil/browser
             - ./:/usr/share/vidjil/docker
+        links:
+            - uwsgi:uwsgi
 
     workers:
         network_mode: bridge
