docker-compose-ci; add a path declaration for '/mnt/result//results' this directory is use to determine owner to launch review server

--- a/docker/docker-compose-ci.yml
+++ b/docker/docker-compose-ci.yml
@@ -11,6 +11,7 @@ services:
         network_mode: bridge
         volumes:
             - ./ci/result:/mnt/result
+            - ./ci/result/results:/mnt/result/results
             - ./ci/uploads:/mnt/upload/uploads
             - ../browser:/usr/share/vidjil/browser
             - ../server/web2py/applications/vidjil:/usr/share/vidjil/server/web2py/applications/vidjil
