--- a/docker/docker-compose-ci.yml
+++ b/docker/docker-compose-ci.yml
@@ -4,6 +4,8 @@ version: '3.8'
 services:
     mysql:
         network_mode: bridge
+        volumes:
+            - ./ci/mysql:/var/lib/mysql
     uwsgi:
         network_mode: bridge
         command: bash /entrypoints/uwsgi-entrypoint.sh --ci
