--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -318,7 +318,7 @@ test_server_unit:
     when: always
     expire_in: 1 week
     paths:
-    - server/web2py/ap‎plications/vidjil‎/tests/
+    - server/web2py/applications/vidjil/tests/
   only:
     - /^feature-.*s.*\/.*$/
     - /^hotfix-.*s.*\/.*$/
@@ -342,6 +342,7 @@ test_server_unit:
     paths:
       - browser/
       - server/web2py/applications/vidjil/
+      - docker/
     when: always
 
 
