--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -263,20 +263,27 @@ test_server_unit:
       - .need_for_quick_test
 
 .setup_docker_server:
+    # Build specific version of docker images
     - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/server:test" docker/vidjil-server
     - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/client:test" docker/vidjil-client
+    # Replace path for some volumes
     - sed -i '/\:\/etc\/nginx\/ssl/d' ./docker/docker-compose.yml
     - sed -i '/\/var\/lib\/mysql/d' ./docker/docker-compose.yml
     - sed -i 's/\/opt\/vidjil\/databases/databases/' ./docker/docker-compose.yml
     - echo -e "volumes:\n    databases:" >> ./docker/docker-compose.yml
     - sed -i 's/\:latest/\:test/g' ./docker/docker-compose.yml
+    # Use http version of config
     - cd docker/vidjil-server/conf/ && mv defs.py defs_https.py && mv defs_http.py defs.py && cd ../../..
     - make germline && cp browser/js/germline.js docker/vidjil-client/conf
     - mkdir -p docker/postfix/ssl
+    # Start docker images
     - cd docker && docker-compose up -d && cd ..
+    # Execute a script of init database and moke (fake ?) data inside; to be launch before executing tests
     - sed -i "s/^python\ \.\.\/\.\.\/\.\./docker\ exec\ docker_uwsgi_1\ python\ \/usr\/share\/vidjil\/server\/web2py/" server/web2py/applications/vidjil/tests/init_tests.sh
+    - bash server/web2py/applications/vidjil/tests/init_tests.sh
+    # Change File source definition in defs.py file 
     - docker exec docker_uwsgi_1 sed -i "s/^\(FILE_SOURCE .*\)/FILE_SOURCE = '\/usr\/share\/vidjil\/demo'/" /usr/share/vidjil/server/web2py/applications/vidjil/modules/defs.py
-    - docker exec docker_nginx_1 make -C /usr/share/vidjil browser
+    - docker exec docker_nginx_1 make -C /usr/share/vidjil browser # init browser content
   
       
 .test_server_base_dind:
