--- a/docker/.env
+++ b/docker/.env
@@ -1,25 +1,3 @@
 # ###
-# This file contain all settable password and pass to change for running a vidjil server
+# Use this file to declare your own variables values
 # ###
-
-
-# Password to set for root user of mysql
-MYSQL_ROOT_PASSWORD=mysql_root_password
-MYSQL_PASSWORD=rootpass
-
-# Password to use for administration of web2py
-WEB2PY_ADMIN_PASSWORD=web2py_admin_password
-
-# Path to use to store persistant data of vidjil server (upload, results, ...)
-VOLUME_PATH=/opt/vidjil/
-
-# Postfix service
-maildomain=vidjil.org
-smtp_user=vidjil:smtp_pass
-
-
-#############################
-# Don't change these values
-MYSQL_DATABASE=vidjil
-MYSQL_USER=vidjil
-#############################
