--- a/algo/.gitlab-ci.yml
+++ b/algo/.gitlab-ci.yml
@@ -10,7 +10,7 @@
     - schedules
   needs: []
   tags:
-    - cidocker
+    - ci.inria.fr, linux, medium
 
 .coverage_dependency:
   artifacts: &lcov_artifact
@@ -82,7 +82,7 @@ algo_coverage:
   only:
     - /^feature-.*a.*\/.*$/
   tags:
-    - cidocker
+    - ci.inria.fr, linux, medium
 
 benchmark-algo:
   extends: .benchmark-algo
@@ -124,5 +124,5 @@ profiling_algo:
   only:
     - /^feature-.*a.*\/.*$/
   tags:
-    - cidocker
+    - ci.inria.fr, linux, large
     
