py4web by default; restart from a current dev branch
With these modification, server seem starting
Not everything work as expected (no upload of sample, some missing functions, broken ci, ...)
Just a kick to start usage of py4web by default.

--- a/docker/.env-default
+++ b/docker/.env-default
@@ -15,7 +15,7 @@ WEB2PY_ADMIN_PASSWORD=web2py_admin_password
 
 # Path to use to store persistant data of vidjil server (upload, results, ...)
 VOLUME_PATH=./volumes/vidjil/
-VOLUME_NFS=./volumes/nfs/
+VOLUME_NFS=$VOLUME_PATH/mountpoint_nfs
 
 # Postfix service
 maildomain=vidjil.org
@@ -26,4 +26,5 @@ smtp_user=vidjil:smtp_pass
 # Don't change these values
 MYSQL_DATABASE=vidjil
 MYSQL_USER=vidjil
+PYDAL_URI=mysql://vidjil:rootpass@mysql/vidjil
 #############################
