--- a/docker/.env-default
+++ b/docker/.env-default
@@ -10,8 +10,8 @@ SERVICE_NAME="vidjil"
 MYSQL_ROOT_PASSWORD=mysql_root_password
 MYSQL_PASSWORD=rootpass
 
-# Password to use for administration of web2py
-WEB2PY_ADMIN_PASSWORD=web2py_admin_password
+# Password to use for administration of py4web
+PY4WEB_ADMIN_PASSWORD=py4web_admin_password
 
 # Path to use to store persistant data of vidjil server (upload, results, ...)
 VOLUME_PATH=./volumes/vidjil/
